# mock-rest-server

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docs.yml
docker/: Dockerfile
src/: __init__.py  __main__.py
src/api/: __init__.py  dynamic_router.py  mock.py  mock_router.py
src/api/models/: error_model.py  mock.py  mock_model.py
src/db/: __init__.py  db_manager.py
src/db/models/: __init__.py  mock_data.py
src/middlewares/: __init__.py  dynamic_mock_middleware.py
src/services/: __init__.py  handle_mock_request.py  mock_service.py  register_mock.py
src/settings/: __init__.py  settings.py
tests/: conftest.py  test_main.py
